kubernetes/manifests/envoy-gateway-system/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  addresses:
  - type: IPAddress
    value: 192.168.50.224
  listeners:
  - name: https-wildcard
    hostname: "*.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-nullservers-tls
        kind: Secret
        namespace: envoy-gateway-system
    allowedRoutes:
      namespaces:
        from: All
